# PlantMap

./: ._huggingface_sam_test.py  .gitignore  404.html  Dockerfile  README.md  create_all_flowers.py  feature_matching.py  finetune_model.py  huggingface_sam_test.py  index.html  mkdocs.yml  run
config/: CLIP.yaml
config/model/: basic.yaml  classifier.yaml  contrastive.yaml
config/training/: classifier.yaml  contrastive.yaml
css/: styles.css
docs/: index.md
fedn_supervised/: README.md  exp.sh  fedn.yaml  pyproject.toml  run.sh
fedn_supervised/client/: README.md  build.py  create_seed_model.py  data.py  fedn.yaml  model.py  overrides.txt  pyproject.toml  train.py  utils.py  validate.py
fedn_supervised/client/config/model/: contrastive.yaml
finetune_mae/: data.py  data_auto.py  finetune_mae.py  model_pretrain.py  pyproject.toml  train_auto.py
finetune_mae/src/: data_finetune.py  model_finetune.py  train_auto.py  train_sim.py  train_sim2.py  train_sim3.py
finetune_mae/src/data/: data_auto.py  data_cont.py
finetune_mae/src/models/: model_byol.py  model_cont.py  model_moco.py  model_pretrain.py
finetune_mae/src/utils/: get_dataset_size.py  no_flower_filter.py  similarity_loss.py
finetune_mae/utils/: similarity_loss.py
pretrain_clip/: finetune_model.py  pyproject.toml
pretrain_clip/config/model/: basic.yaml  classifier.yaml  contrastive.yaml  pretrain_classifier.yaml  pretrain_contrastive.yaml
pretrain_clip/config/training/: basic.yaml  pretrain_contrastive.yaml
rootfs/workspace/: create_all_flowers.py  feature_matching.py  huggingface_sam_test.py  run
rootfs/workspace/client/: data.py  fedn.yaml  model.py  train.py
sam_clip/: README.md  download_pretrained_ckpt.sh  sam_clip_text_seg.py
sam_clip/config/: insseg.yaml  sam.yaml
sam_clip/models/: __init__.py
sam_clip/models/clip/: clip.py
sam_clip/models/detector/: __init__.py  insseg_model.py  utils.py
sam_clip/models/sam/: predictor.py
sam_clip/utils/: parse_config.py
scripts/: huggingface_sam_test.py
search/: search_index.json
unsupervised_classification/: README.md  create_all_flowers.py  create_data.py  feature_matching.py  pyproject.toml
unsupervised_classification/src/: train_auto.py  train_sim1.py  train_sim2.py  train_sim3.py
unsupervised_classification/src/data/: data_cont.py
unsupervised_classification/src/models/: model_byol.py  model_cont.py  model_moco.py  model_pretrain.py
unsupervised_classification/src/utils/: get_dataset_size.py  no_flower_filter.py  similarity_loss.py
