[project]
name = "finetune-mae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "lightning>=2.4.0",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "ruff>=0.8.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.0",
    "wandb>=0.19.0",
]
