[project]
name = "unsupervised-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "matplotlib>=3.10.0",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "sam2>=1.1.0",
    "torch>=2.5.1",
]
